force-app/main/default/objects/Demand__c/fields/Adjustment_Entry__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustment Entry</label>
    <type>Checkbox</type>
</CustomField>