force-app/main/default/objects/Demand__c/fields/Ageing__c.field-meta.xml
<CustomField>
    <fullName>Ageing__c</fullName>
    <formula>IF(Due_Date__c &lt; TODAY(), 
IF(((Total_Amount_Balance__c &gt; 0)||(Total_Tax_Balance__c &gt; 0)), 
(TODAY()- Due_Date__c),0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>