force-app/main/default/objects/Demand__c/fields/Agreement_Value_Balance__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Balance__c</fullName>
    <formula>Agreement_Value_Demanded_New__c -  Agreement_Value_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>