force-app/main/default/objects/Demand__c/fields/Booked_date__c.field-meta.xml
<CustomField>
    <fullName>Booked_date__c</fullName>
    <formula>Booking__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked date</label>
    <type>DateTime</type>
</CustomField>