force-app/main/default/objects/Demand__c/fields/Business_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Code__c</fullName>
    <label>Business Unit Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>