force-app/main/default/objects/Demand__c/fields/CB_Mail_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>CB_Mail_To_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CB Mail To Customer</label>
    <type>Checkbox</type>
</CustomField>