force-app/main/default/objects/Demand__c/fields/Charge_10_Balance__c.field-meta.xml
<CustomField>
    <fullName>Charge_10_Balance__c</fullName>
    <formula>Charge_10_Demanded__c  -  Charge_10_Paid__c</formula>
    <label>Charge 10 Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>