force-app/main/default/objects/Demand__c/fields/Charge_10_CGST__c.field-meta.xml
<CustomField>
    <fullName>Charge_10_CGST__c</fullName>
    <label>Charge 10 VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>