force-app/main/default/objects/Demand__c/fields/Charge_10_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Charge_10_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge 10 Lookup</label>
    <referenceTo>ProjectCharges__c</referenceTo>
    <relationshipLabel>Demands (Charge 10)</relationshipLabel>
    <relationshipName>Demands9</relationshipName>
    <type>Lookup</type>
</CustomField>