force-app/main/default/objects/Demand__c/fields/Charge_11_Balance__c.field-meta.xml
<CustomField>
    <fullName>Charge_11_Balance__c</fullName>
    <formula>Charge_11_Demanded__c  -  Charge_11_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 11 Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>