force-app/main/default/objects/Demand__c/fields/Charge_11_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_11_Name__c</fullName>
    <label>Charge 11 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>