force-app/main/default/objects/Demand__c/fields/Charge_12_Balance__c.field-meta.xml
<CustomField>
    <fullName>Charge_12_Balance__c</fullName>
    <formula>Charge_12_Demanded__c  -  Charge_12_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 12 Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>