force-app/main/default/objects/Demand__c/fields/Charge_12_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Charge_12_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge 12 Lookup</label>
    <referenceTo>ProjectCharges__c</referenceTo>
    <relationshipLabel>Demands (Charge 12)</relationshipLabel>
    <relationshipName>DemandsC0aC</relationshipName>
    <type>Lookup</type>
</CustomField>