force-app/main/default/objects/Demand__c/fields/Charge_12_Paid__c.field-meta.xml
<CustomField>
    <fullName>Charge_12_Paid__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Charge 12 Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>