force-app/main/default/objects/Demand__c/fields/Charge_14_SGST__c.field-meta.xml
<CustomField>
    <fullName>Charge_14_SGST__c</fullName>
    <label>Charge 14 SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>