force-app/main/default/objects/Demand__c/fields/Charge_14_Tax_Balance__c.field-meta.xml
<CustomField>
    <fullName>Charge_14_Tax_Balance__c</fullName>
    <formula>Charge_14_Tax_Demanded__c - Charge_14_Tax_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 14 Tax Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>