force-app/main/default/objects/Demand__c/fields/Charge_1_CGST__c.field-meta.xml
<CustomField>
    <fullName>Charge_1_CGST__c</fullName>
    <label>Charge 1 VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>