force-app/main/default/objects/Demand__c/fields/Charge_1_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Charge_1_Service_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charge 1 VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>