force-app/main/default/objects/Demand__c/fields/Charge_4_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Charge_4_Demanded__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Charge 4 Demanded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>