force-app/main/default/objects/Demand__c/fields/Corporate_Collection_Control_Report__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Collection_Control_Report__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Corporate Collection Control Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>