force-app/main/default/objects/Demand__c/fields/Date_for_Late_Payment_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Late_Payment_Calculation__c</fullName>
    <formula>IF( GL_Date__c &gt;  Payment_Milestones__r.Milestone_Due_Date__c , GL_Date__c, IF(GL_Date__c &lt; Payment_Milestones__r.Milestone_Due_Date__c ,Payment_Milestones__r.Milestone_Due_Date__c ,IF(ISBLANK(Payment_Milestones__r.Milestone_Due_Date__c ),GL_Date__c, Payment_Milestones__r.Milestone_Due_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date for Late Payment Calculation</label>
    <type>Date</type>
</CustomField>