force-app/main/default/objects/Demand__c/fields/Debit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Debit_Balance__c</fullName>
    <formula>Debit_Demanded__c - Debit_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>