force-app/main/default/objects/Demand__c/fields/Debit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Debit_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Debit Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>