force-app/main/default/objects/Demand__c/fields/Debit_Type__c.field-meta.xml
<CustomField>
    <fullName>Debit_Type__c</fullName>
    <label>Debit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque Bounce</fullName>
            </value>
            <value>
                <fullName>Brokerage Reversal</fullName>
            </value>
            <value>
                <fullName>Interior Charges</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Interest Charges</fullName>
            </value>
            <value>
                <fullName>DLD Charges</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Credit Card Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>