force-app/main/default/objects/Demand__c/fields/Demand_Age__c.field-meta.xml
<CustomField>
    <fullName>Demand_Age__c</fullName>
    <label>Demand Age</label>
    <length>4</length>
    <type>Text</type>
</CustomField>