force-app/main/default/objects/Demand__c/fields/Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Status__c</fullName>
    <label>Demand Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Raised</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>