force-app/main/default/objects/Demand__c/fields/Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Descriptions__c</fullName>
    <label>Descriptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>