force-app/main/default/objects/Demand__c/fields/Don_t_Generate_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Generate_Sequence_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Generate Sequence No</label>
    <type>Checkbox</type>
</CustomField>