force-app/main/default/objects/Demand__c/fields/Installment__c.field-meta.xml
<CustomField>
    <fullName>Installment__c</fullName>
    <formula>If(NOT(ISNULL(Payment_Milestones__c)), Payment_Milestones__r.Installment__c,   Milestone_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment</label>
    <type>Text</type>
</CustomField>