force-app/main/default/objects/Demand__c/fields/Interest_Charges__c.field-meta.xml
<CustomField>
    <fullName>Interest_Charges__c</fullName>
    <label>Interest Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>