force-app/main/default/objects/Demand__c/fields/Interest_on_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_Balance_Amount__c</fullName>
    <formula>If ( TODAY() &gt; Due_Date__c,
(Total_Balance__c *  $Setup.ROI_del__c.ROI__c * ( TODAY() -  Due_Date__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest on Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>