force-app/main/default/objects/Demand__c/fields/Interest_On_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_On_Paid_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest On Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>