force-app/main/default/objects/Demand__c/fields/Is_Group_Demand__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Group Demand</label>
    <type>Checkbox</type>
</CustomField>