force-app/main/default/objects/Demand__c/fields/Last_LP_Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_LP_Raised_Date__c</fullName>
    <label>Last LP Raised Date</label>
    <type>Date</type>
</CustomField>