force-app/main/default/objects/Demand__c/fields/Last_Reminder_Notice_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Notice_Amount_1__c</fullName>
    <label>Last Reminder Notice Amount 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>