force-app/main/default/objects/Demand__c/fields/LP_Calculation__c.field-meta.xml
<CustomField>
    <fullName>LP_Calculation__c</fullName>
    <label>LP Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>