force-app/main/default/objects/Demand__c/fields/LP_Raised_For__c.field-meta.xml
<CustomField>
    <fullName>LP_Raised_For__c</fullName>
    <label>LP Raised For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>