force-app/main/default/objects/Demand__c/fields/Manual_LP_Charge__c.field-meta.xml
<CustomField>
    <fullName>Manual_LP_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual LP Charge</label>
    <type>Checkbox</type>
</CustomField>