force-app/main/default/objects/Demand__c/fields/MVAT_Demanded_New__c.field-meta.xml
<CustomField>
    <fullName>MVAT_Demanded_New__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MVAT Demanded (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>