force-app/main/default/objects/Demand__c/fields/No_of_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_days__c</fullName>
    <description>No of Days Calculated based on the outstanding days.</description>
    <label>No of days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>