force-app/main/default/objects/Demand__c/fields/No_of_Delay__c.field-meta.xml
<CustomField>
    <fullName>No_of_Delay__c</fullName>
    <formula>IF(Due_Date__c  &lt; Today(), Today() - Due_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>