force-app/main/default/objects/Demand__c/fields/No_of_Months__c.field-meta.xml
<CustomField>
    <fullName>No_of_Months__c</fullName>
    <label>No of Months</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>