force-app/main/default/objects/Demand__c/fields/Number_of_Late_Payment_Raised__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Late_Payment_Raised__c</fullName>
    <label>Number of Late Payment Raised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>