force-app/main/default/objects/Demand__c/fields/OpportunityFormula__c.field-meta.xml
<CustomField>
    <fullName>OpportunityFormula__c</fullName>
    <formula>Booking__r.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityFormula</label>
    <type>Text</type>
</CustomField>