force-app/main/default/objects/Demand__c/fields/Order_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_By_Date__c</fullName>
    <formula>If( ISNULL(GL_Date__c )  ,DATEVALUE( CreatedDate ) , GL_Date__c )</formula>
    <label>Order By Date</label>
    <type>Date</type>
</CustomField>