force-app/main/default/objects/Demand__c/fields/Other_Charges_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Name__c</fullName>
    <label>Other Charges Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>