force-app/main/default/objects/Demand__c/fields/Other_Charges_Type_Demand__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Type_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Charges Type Demand</label>
    <type>Checkbox</type>
</CustomField>