force-app/main/default/objects/Demand__c/fields/Outstanding_Amount_after_waiver__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount_after_waiver__c</fullName>
    <formula>Total_Amount_with_Tax_Demanded__c  -  Waiver_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount after  waiver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>