force-app/main/default/objects/Demand__c/fields/OutStanding_days__c.field-meta.xml
<CustomField>
    <fullName>OutStanding_days__c</fullName>
    <formula>IF(( Total_Amount_Paid__c - Total_Amount_Demanded__c) &gt;= 0,&quot;Paid&quot;, TEXT(TODAY()  -Date_for_Late_Payment_Calculation__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OutStanding days</label>
    <type>Text</type>
</CustomField>