force-app/main/default/objects/Demand__c/fields/OutStanding_days_calculated__c.field-meta.xml
<CustomField>
    <fullName>OutStanding_days_calculated__c</fullName>
    <description>The Field value will be calculated and updated from Booking button Calculate Late Charges</description>
    <label>OutStanding days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>