force-app/main/default/objects/Demand__c/fields/Overall_Interest_Due__c.field-meta.xml
<CustomField>
    <fullName>Overall_Interest_Due__c</fullName>
    <formula>Total_Interest_Amount_Due__c + Tax_on_Total_Interest_Amount_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Interest Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>