force-app/main/default/objects/Demand__c/fields/Overall_Interest_Waived__c.field-meta.xml
<CustomField>
    <fullName>Overall_Interest_Waived__c</fullName>
    <formula>Total_Interest_Tax_Waived__c + Total_Interest_Amount_Waived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Interest Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>