force-app/main/default/objects/Demand__c/fields/Payment_Towards__c.field-meta.xml
<CustomField>
    <fullName>Payment_Towards__c</fullName>
    <label>Payment Towards</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Account</fullName>
                <default>true</default>
                <label>Corporate Account</label>
            </value>
            <value>
                <fullName>ESCROW Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>