force-app/main/default/objects/Demand__c/fields/Previous_LP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_LP_Amount__c</fullName>
    <label>Previous LP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>