force-app/main/default/objects/Demand__c/fields/Previous_LP_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_LP_Name__c</fullName>
    <label>Previous LP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>