force-app/main/default/objects/Demand__c/fields/Primary_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Name__c</fullName>
    <formula>Booking__r.Primary_Applicant_Name__c</formula>
    <label>Primary Applicant Name</label>
    <type>Text</type>
</CustomField>