force-app/main/default/objects/Demand__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>