force-app/main/default/objects/Demand__c/fields/PTP_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>PTP_Amount_2__c</fullName>
    <label>PTP Amount 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>